fix (website): improve button contrast

--- a/packages/website/styles/button.css
+++ b/packages/website/styles/button.css
@@ -19,7 +19,7 @@
 
 .btn.caution {
   color: var(--nswhite);
-  background-color: var(--nsorange);
+  background-color: var(--nsorangred);
 }
 
 .btn.small {
