--- a/packages/website/styles/vars.css
+++ b/packages/website/styles/vars.css
@@ -17,6 +17,7 @@
   --nslime: #66fecb;
   --nsnavy: #336bad;
   --nsorange: #ee4116;
+  --nsorangred: #d53810;
   --nspeach: #ffe1c5;
   --nspink: #f7cdcf;
   --nsred-100: #feebeb;
